--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -794,7 +794,7 @@
  	 	 	 	"eng": "Bio"
  	 	 	},
  	 	 	"bioNotFound": {
- 	 	 	 	"trans": "RÉDIGER",
+ 	 	 	 	"trans": "Rédige une biographie",
  	 	 	 	"eng": "REDACTED"
  	 	 	},
  	 	 	"numOfMember": {
@@ -1032,50 +1032,50 @@
  	 	 	 	},
  	 	 	 	"gearTooWeak": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Obtenez encore de meilleurs équipements!",
+ 	 	 	 	 	 	"trans": "Obtiens un meilleur équipement !",
  	 	 	 	 	 	"eng": "Get even better equipments!"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Votre équipement actuel semble absorbé pour votre niveau, essayez d'imprimer des plus forts pour les remplacer",
+ 	 	 	 	 	 	"trans": "Ton équipement actuel semble outrepassé par ton niveau, essaye d'en imprimer un plus fort pour le remplacer",
  	 	 	 	 	 	"eng": "Your current equipment seems abit outdated for your level, try printing stronger ones to replace them"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"noUpgrade": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Mettez à niveau votre équipement!",
+ 	 	 	 	 	 	"trans": "Mets à niveau ton équipement!",
  	 	 	 	 	 	"eng": "Upgrade your equipment!"
  	 	 	 	 	},
  	 	 	 	 	"description": {
  	 	 	 	 	 	"vars": [
  	 	 	 	 	 	 	"itemName"
  	 	 	 	 	 	],
- 	 	 	 	 	 	"trans": "Vous pouvez mettre à niveau votre équipement en utilisant le ${itemName}",
+ 	 	 	 	 	 	"trans": "Tu peux mettre à niveau ton équipement en utilisant le ${itemName}",
  	 	 	 	 	 	"eng": "You can upgrade your equipment by using the ${itemName}"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"aiCore": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Utilisez AI Core",
+ 	 	 	 	 	 	"trans": "Utilise des Cœurs IA",
  	 	 	 	 	 	"eng": "Use AI Core"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "On dirait que vous avez des noyaux AI, utilisez-les pour faire le nivellement automatique Afk dans la zone de niveau appropriée.",
+ 	 	 	 	 	 	"trans": "On dirait que tu as des noyaux AI, utilise-les pour faire un AFK de nivellement automatique dans la zone adéquate.",
  	 	 	 	 	 	"eng": "Looks like you have some AI Cores, use them to do AFK auto leveling in appropriate level area."
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"noAiCore": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Acquérir AI CORELS",
+ 	 	 	 	 	 	"trans": "Acquérir Cœurs IA",
  	 	 	 	 	 	"eng": "Acquire AI Cores"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Vous pouvez obtenir Ai Cores par: \n         - Scavenge dans divers endroits \n         - Frapper avec des processeurs de hachage et des restes techniques \n         - pillage des ennemis dans tous les endroits",
+ 	 	 	 	 	 	"trans": "Tu peux obtenir des cœurs IA en: \n         - Fouillant dans divers endroits \n         - Craftant avec des cœurs de hash et des pièces technologiques \n         - Pillant des ennemis",
  	 	 	 	 	 	"eng": "You may get AI Cores by: \n        - Scavenge in various locations\n        - Crafting with Hash Processors and Tech Scraps\n        - Looting from enemies in all locations"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"common": {
  	 	 	 	 	"clickToOpen": {
- 	 	 	 	 	 	"trans": "Cliquez pour ouvrir",
+ 	 	 	 	 	 	"trans": "Clique pour ouvrir",
  	 	 	 	 	 	"eng": "click to open"
  	 	 	 	 	}
  	 	 	 	}
@@ -1165,7 +1165,7 @@
  	 	},
  	 	"tipsBox": {
  	 	 	"title": {
- 	 	 	 	"trans": "Conseils de pro",
+ 	 	 	 	"trans": "Conseils",
  	 	 	 	"eng": "Pro Tips"
  	 	 	},
  	 	 	"description": {
@@ -3229,11 +3229,11 @@
  	 	},
  	 	"aiCoreCluster": {
  	 	 	"name": {
- 	 	 	 	"trans": "CLUSTER AI CORE",
+ 	 	 	 	"trans": "Cœur IA condensé",
  	 	 	 	"eng": "AI Core Cluster"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "AI Core Cluster contient 1000 noyaux AI. peut être facilement assemblé et démonté.",
+ 	 	 	 	"trans": "Un cœur IA condensé contient 1000 cœurs IA. Peut être facilement assemblé ou désassemblé.",
  	 	 	 	"eng": "AI Core Cluster contains 1000 AI Cores. can be easily assembled and disassembled."
  	 	 	}
  	 	},
@@ -4231,7 +4231,7 @@
  	 	"cosmetic": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Salut ! Fais un don pour obtenir des avantages cosmétiques et pour soutenir les jeux gratuits comme celui-ci !"
+ 	 	 	 	 	"Salut ! Fais un don pour obtenir des avantages cosmétiques et soutenir les jeux gratuits comme celui-ci !"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hi! Donate to get cosmetic perks and to help support Free-to-Win games like this one!"
@@ -4396,7 +4396,7 @@
  	 	 	 	"eng": "Black Market"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Un marché souterrain rempli de personnes avec toutes sortes d'offres ombragées et de rares buts. \r\n         Imprimez et vendez vos caches à l'ici pour gagner de l'argent rapide",
+ 	 	 	 	"trans": "Un marché souterrain rempli de personnes proposants toutes sortes d'offres douteuses et d'objets inconnus. \r\n         Imprime et vends tes plans ici pour gagner de l'argent facile",
  	 	 	 	"eng": "An underground market filled with people with all kind of shady deals and rare loots.\r\n        Print and sell your caches at the here to earn quick money"
  	 	 	}
  	 	}
@@ -4448,7 +4448,7 @@
  	 	 	 	"eng": "Improve Ammunition"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Bricoler des munitions pour trouver des moyens plus efficaces de les fabriquer.",
+ 	 	 	 	"trans": "Bricole des munitions pour trouver des moyens plus efficaces de les fabriquer.",
  	 	 	 	"eng": "Tinker with ammunition, to find more effective ways of crafting it."
  	 	 	}
  	 	},
@@ -5327,7 +5327,7 @@
  	 	},
  	 	"block": {
  	 	 	"title": {
- 	 	 	 	"trans": "Êtes-vous sûr de vouloir bloquer ce joueur?",
+ 	 	 	 	"trans": "Es-tu sûr de vouloir bloquer ce joueur?",
  	 	 	 	"eng": "Are you sure you want to block this player?"
  	 	 	}
  	 	},
@@ -5349,7 +5349,7 @@
  	 	 	 	"eng": "No inappropriate language."
  	 	 	},
  	 	 	"footer": {
- 	 	 	 	"trans": "Tu seras mis en sourdine si tu ne respecte pas l'une de ces règles",
+ 	 	 	 	"trans": "Tu seras mis en sourdine si tu ne respectes pas l'une de ces règles",
  	 	 	 	"eng": "You will be MUTED if you breach any of the rules"
  	 	 	},
  	 	 	"footer2": {
@@ -5415,7 +5415,7 @@
  	 	 	 	"eng": "Unofficial translation"
  	 	 	},
  	 	 	"description1": {
- 	 	 	 	"trans": "Comme ce jeu est fait par une seule personne, il est très difficile de traduire toutes les langues correctement, mais je travaille sur l'ajout d'autres traductions :)",
+ 	 	 	 	"trans": "Comme ce jeu est réalisé par une seule personne, il est très difficile de traduire toutes les langues correctement, mais je travaille sur l'ajout d'autres traductions :)",
  	 	 	 	"eng": "As this game is made by only one person, it's very difficult translate all languages correctly, but I am working on adding more translations :)"
  	 	 	},
  	 	 	"description": {
@@ -5483,7 +5483,7 @@
  	 	 	 	 	"from",
  	 	 	 	 	"to"
  	 	 	 	],
- 	 	 	 	"trans": "${from} => ${to}",
+ 	 	 	 	"trans": "${from} ==> ${to}",
  	 	 	 	"eng": "${from} => ${to}"
  	 	 	}
  	 	},
@@ -5528,7 +5528,7 @@
  	 	 	},
  	 	 	"noShowToggle": {
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Tu peux voir le tutoriel complet dans profil > Tutoriel",
+ 	 	 	 	 	"trans": "Tu peux voir le tutoriel complet dans Profil > Didacticiel",
  	 	 	 	 	"eng": "You can see the full tutorial at Profile > Tutorial tab"
  	 	 	 	},
  	 	 	 	"label": {
