--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -81,7 +81,7 @@
  	 	 	 	"eng": "members"
  	 	 	},
  	 	 	"occupationPoint": {
- 	 	 	 	"trans": "샹그릴라 체크포인트",
+ 	 	 	 	"trans": "샹그릴라에 대한 통제력",
  	 	 	 	"eng": "Control over Shangri-la"
  	 	 	},
  	 	 	"nextUpkeepDate": {
@@ -151,7 +151,7 @@
  	 	 	 	 	"eng": "seconds"
  	 	 	 	},
  	 	 	 	"colorBox": {
- 	 	 	 	 	"trans": "아래의 색을 누르십시오",
+ 	 	 	 	 	"trans": "아래의 색중에서 이 색을 누르십시오",
  	 	 	 	 	"eng": "Click on this color below"
  	 	 	 	},
  	 	 	 	"lose": {
@@ -160,7 +160,7 @@
  	 	 	 	 	 	"eng": "Decryption failed"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "올바른 색상의 순서를 눌러 잠금을 해제하십시오",
+ 	 	 	 	 	 	"trans": "올바른 색상을 순서대로 눌러 잠금을 해제하십시오",
  	 	 	 	 	 	"eng": "Click on the correct color sequence to unlock"
  	 	 	 	 	},
  	 	 	 	 	"button": {
@@ -354,7 +354,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"name"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${name}가 몇 초 후에 종료됩니다!",
+ 	 	 	 	 	"trans": "${name}이(가) 몇 초 후에 종료됩니다!",
  	 	 	 	 	"eng": "${name} is about to run out in a few seconds!"
  	 	 	 	},
  	 	 	 	"refresh": {
@@ -663,7 +663,7 @@
  	 	 	},
  	 	 	"factoryReset": {
  	 	 	 	"confirmation": {
- 	 	 	 	 	"trans": "이 행동은 아이템의 모든 강화를 초기화합니다. \r\n        계속 진행하시겠습니까?",
+ 	 	 	 	 	"trans": "이 행동은 해당 아이템의 모든 교정상태를 초기화합니다. \r\n        계속 진행하시겠습니까?",
  	 	 	 	 	"eng": "Doing this will reset all calibration on your item. It will also make it tradable again. \r\n      Are you sure you want to proceed?"
  	 	 	 	},
  	 	 	 	"trans": "공장 초기화",
@@ -887,11 +887,11 @@
  	 	 	},
  	 	 	"leaveDungeon": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "정말로 던전에서 떠나시겠습니까?",
+ 	 	 	 	 	"trans": "정말로 이 던전에서 떠나시겠습니까?",
  	 	 	 	 	"eng": "Are you sure you want to leave this dungeon?"
  	 	 	 	},
  	 	 	 	"subtitle": {
- 	 	 	 	 	"trans": "던전에 다시 입장하실수 없습니다",
+ 	 	 	 	 	"trans": "이 던전에 다시 입장하실수 없습니다",
  	 	 	 	 	"eng": "You will not be able to enter this dungeon instance again"
  	 	 	 	}
  	 	 	}
@@ -1026,7 +1026,7 @@
  	 	 	 	 	 	"eng": "Improve Printing Rank"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "인쇄 순위 인쇄하는 항목의 수준을 결정합니다. 인쇄 & 검은 시장에서 판매 & 판매",
+ 	 	 	 	 	 	"trans": "인쇄 레벨에 따라 인쇄하는 아이템의 수준이 결정됩니다. 인쇄하여 경험치를 얻고 암시장에서 판매 하세요.",
  	 	 	 	 	 	"eng": "Printing Rank determines the level of item you print. Gain printing exp by print & sell in Black Market"
  	 	 	 	 	}
  	 	 	 	},
@@ -1036,7 +1036,7 @@
  	 	 	 	 	 	"eng": "Get even better equipments!"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "현재 장비가 수준을 위해 구식으로 구식으로 보입니다",
+ 	 	 	 	 	 	"trans": "당신의 현재 장비가 레벨에 비해 구식으로 보입니다. 더 강한 장비를 인쇄하여 교체하세요.",
  	 	 	 	 	 	"eng": "Your current equipment seems abit outdated for your level, try printing stronger ones to replace them"
  	 	 	 	 	}
  	 	 	 	},
@@ -1069,7 +1069,7 @@
  	 	 	 	 	 	"eng": "Acquire AI Cores"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "AI 코어를 얻을 수 있습니다 : \n         - 다양한 위치에서 청소하십시오 \n         - 해시 프로세서 및 테크 스크랩으로 제작 \n         - 모든 곳에서 적을 약탈합니다",
+ 	 	 	 	 	 	"trans": "AI 코어를 얻을 수 있습니다 : \n         - 다양한 위치에서 노획하십시오 \n         - Hash 프로세서 및 공학 조각으로 제작 \n         - 모든 곳에서 적을 약탈합니다",
  	 	 	 	 	 	"eng": "You may get AI Cores by: \n        - Scavenge in various locations\n        - Crafting with Hash Processors and Tech Scraps\n        - Looting from enemies in all locations"
  	 	 	 	 	}
  	 	 	 	},
@@ -1380,7 +1380,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"percent"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${percent} % 파괴적인 실패 기회 로이 항목을 보정하고 싶습니까?",
+ 	 	 	 	 	"trans": "파괴 확률${percent} %. 정말 교정 하시겠습니까?",
  	 	 	 	 	"eng": "Are you sure you want to calibrate this item with ${percent}% destructive failure chance?"
  	 	 	 	}
  	 	 	}
@@ -1675,7 +1675,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"playerCount"
  	 	 	 	],
- 	 	 	 	"trans": "${playerCount} 유저 접속중",
+ 	 	 	 	"trans": "${playerCount}명의 유저 접속중",
  	 	 	 	"eng": "${playerCount} player(s) connected"
  	 	 	}
  	 	},
