--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -4411,7 +4411,7 @@
  	 	 	 	"eng": "Black Market"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "지하 시장은 모든 종류의 그늘진 거래와 희귀 한 전리품을 가진 사람들로 가득 찼습니다. \r\n         여기에서 캐시를 인쇄하고 팔으려면 빠른 돈을 벌기 위해 판매하십시오",
+ 	 	 	 	"trans": "지하 시장은 모든 종류의 암거래와 희귀한 전리품을 가진 사람들로 가득 찼습니다. \r\n         빠르게 돈을 벌고 싶다면, 여기서 캐시들을 인쇄하고 판매하시면 됩니다.",
  	 	 	 	"eng": "An underground market filled with people with all kind of shady deals and rare loots.\r\n        Print and sell your caches at the here to earn quick money"
  	 	 	}
  	 	}
@@ -4529,11 +4529,11 @@
  	 	},
  	 	"gambling2": {
  	 	 	"name": {
- 	 	 	 	"trans": "플레이 메가 Pachinko S Plus Pro Max",
+ 	 	 	 	"trans": "메가 Pachinko S Plus Pro Max",
  	 	 	 	"eng": "Play MEGA Pachinko s plus pro max"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Konnichiwa !! uwu. \r\n         오늘 부자가되고 운이 좋았습니까? \r\n         0.1 %의 기회가있는 1,000,000 BTC만이 1,000,000 BTC (제한된 시간 특별 제안)로 플레이하십시오",
+ 	 	 	 	"trans": "Konnichiwa !! uwu. \r\n         오늘따라 운이 좋으신거 같나요? \r\n       한번당 1,000,000 BTC, 기간 한정 특가!!!!! 운이 좋다면 0.1퍼센트 확률로 '에픽' 아이템을 먹을수도 있습니다!",
  	 	 	 	"eng": "Konnichiwa!! UwU\r\n        Are you feeling rich and lucky today?\r\n        play now only 1,000,000 btc once (limited time special offer!) with 0.1% chance to win a EPIC item! \r\n        "
  	 	 	}
  	 	},
