--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -409,7 +409,7 @@
  	 	 	 	"eng": "Increase your Printing Rank to create more powerful weapons by printing more caches"
  	 	 	},
  	 	 	"lowPrintLevelTip3": {
- 	 	 	 	"trans": "또는 검정 시장에서 캐시를 자동으로 인쇄하고 판매함으로써",
+ 	 	 	 	"trans": "또는 암시장에서 캐시를 자동으로 인쇄하고 판매함으로써",
  	 	 	 	"eng": "Or by auto print and selling your caches in the Black Market"
  	 	 	},
  	 	 	"quickSlots": {
@@ -1022,7 +1022,7 @@
  	 	 	 	},
  	 	 	 	"printingTooLow": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "인쇄 순위 개선",
+ 	 	 	 	 	 	"trans": "인쇄 레벨을 올리세요",
  	 	 	 	 	 	"eng": "Improve Printing Rank"
  	 	 	 	 	},
  	 	 	 	 	"description": {
@@ -1032,7 +1032,7 @@
  	 	 	 	},
  	 	 	 	"gearTooWeak": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "더 나은 장비를 얻으십시오!",
+ 	 	 	 	 	 	"trans": "더 나은 장비를 얻으세요!",
  	 	 	 	 	 	"eng": "Get even better equipments!"
  	 	 	 	 	},
  	 	 	 	 	"description": {
@@ -1042,24 +1042,24 @@
  	 	 	 	},
  	 	 	 	"noUpgrade": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "장비를 업그레이드하십시오!",
+ 	 	 	 	 	 	"trans": "장비를 강화하세요!",
  	 	 	 	 	 	"eng": "Upgrade your equipment!"
  	 	 	 	 	},
  	 	 	 	 	"description": {
  	 	 	 	 	 	"vars": [
  	 	 	 	 	 	 	"itemName"
  	 	 	 	 	 	],
- 	 	 	 	 	 	"trans": "${itemName}을 사용하여 장비를 업그레이드 할 수 있습니다",
+ 	 	 	 	 	 	"trans": "${itemName}를 사용하여 장비를 강화할 수 있습니다",
  	 	 	 	 	 	"eng": "You can upgrade your equipment by using the ${itemName}"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"aiCore": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "AI 코어를 사용하십시오",
+ 	 	 	 	 	 	"trans": "AI 코어를 사용하세요",
  	 	 	 	 	 	"eng": "Use AI Core"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "AI 코어가있는 것처럼 보입니다. 적절한 레벨 영역에서 AFK 자동 레벨링을 수행하도록하십시오.",
+ 	 	 	 	 	 	"trans": "AI 코어를 가지고 있네요. 이를 사용하여 적절한 레벨 지역에서 자동 사냥을 수행하도록 하세요.",
  	 	 	 	 	 	"eng": "Looks like you have some AI Cores, use them to do AFK auto leveling in appropriate level area."
  	 	 	 	 	}
  	 	 	 	},
@@ -1075,7 +1075,7 @@
  	 	 	 	},
  	 	 	 	"common": {
  	 	 	 	 	"clickToOpen": {
- 	 	 	 	 	 	"trans": "클릭하십시오",
+ 	 	 	 	 	 	"trans": "클릭하세요",
  	 	 	 	 	 	"eng": "click to open"
  	 	 	 	 	}
  	 	 	 	}
@@ -1113,7 +1113,7 @@
  	 	 	 	"eng": "rewards"
  	 	 	},
  	 	 	"rewardAvailable": {
- 	 	 	 	"trans": "클릭하여 보상을 모으세요",
+ 	 	 	 	"trans": "클릭하여 보상을 받으세요",
  	 	 	 	"eng": "Click to collect reward"
  	 	 	},
  	 	 	"viewDetails": {
@@ -1142,11 +1142,11 @@
  	 	 	 	 	"eng": "This could be caused by:"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "1. 불공정 한 이점을 얻기 위해 여러 계정을 만들었습니다",
+ 	 	 	 	 	"trans": "1. 불공정한 이점을 얻기 위해 여러 계정을 만들었습니다",
  	 	 	 	 	"eng": "1. You created multiple accounts to gain unfair advantage"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "2. 당신은 어떤 종류의 자동화 된 소프트웨어를 사용하여 오토 클리커, 봇 등과 같은 불공정 이점을 얻었습니다.",
+ 	 	 	 	 	"trans": "2. 당신은 오토 클리커, 봇 등과 같은 일종의 자동화 된 소프트웨어를 사용하여 불공정한 이점을 얻었습니다.",
  	 	 	 	 	"eng": "2. You have used some kind of automated software to gain unfair advantage, such as autoclicker, bots, etc."
  	 	 	 	},
  	 	 	 	"4": {
@@ -4352,10 +4352,10 @@
  	 	"equipmentUpgrade": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"강화 코어를 기계에 넣으면 장비의 강화을 도와줄게.",
- 	 	 	 	 	"장비 강화은 도와줄 수 있지만, 장비가 파괴되더라도 나한테 뭐라 하지 말라고?.",
+ 	 	 	 	 	"장비 교정 코어를 기계에 넣으면 장비의 강화를 도와줄게.",
+ 	 	 	 	 	"장비 강화는 도와줄 수 있지만, 장비가 파괴되더라도 나한테 뭐라 하지 말라고?",
  	 	 	 	 	"내 이름은 카미코야. 저쪽의 미녀는 칼리. 그녀는 약간.. 변덕스러워.",
- 	 	 	 	 	"강화 코어를 넣으면 30분 정도 걸려. 여기서 기다릴 수도 있지만.. 그러진 않는게 좋을걸?."
+ 	 	 	 	 	"장비 교정 코어를 넣으면 30분 정도 걸려. 여기서 기다릴 수도 있지만.. 그러진 않는게 좋을걸?"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Insert a Calibration Core into the machine, and I shall help you calibrate any of your equipment."
@@ -4366,7 +4366,7 @@
  	 	 	 	"eng": "Calibration Station"
  	 	 	},
  	 	 	"canAccessError": {
- 	 	 	 	"trans": "레벨 10 이상이 되어야 장비 강화소에 접속할 수 있습니다",
+ 	 	 	 	"trans": "레벨 10 이상이 되어야 장비 교정소에 접속할 수 있습니다",
  	 	 	 	"eng": "You need to be at least level 10 to access Calibration Station"
  	 	 	}
  	 	},
