--- a/contribution/lang/zh-CN.json
+++ b/contribution/lang/zh-CN.json
@@ -1605,7 +1605,7 @@
  	 	 	 	"eng": "Coupon"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "如果您的拥有我们的在某个活动中发放的优惠券，您可以在此领取。",
+ 	 	 	 	"trans": "如果您拥有我们在某个活动中发放的优惠券，您可以在此领取。",
  	 	 	 	"eng": "If you have a coupon from one of our events, you can claim it here."
  	 	 	},
  	 	 	"placeholder": {
@@ -1761,13 +1761,13 @@
  	 	 	 	"eng": "please register or login with existing account"
  	 	 	},
  	 	 	"asusDescription": {
- 	 	 	 	"trans": "华硕手机（Zenfone，Rog）有屏幕的错误不可点击，在此情况下，请尝试再次关闭屏幕，或者将此应用程序放在后台并再次恢复。 这应该解决问题:)",
+ 	 	 	 	"trans": "华硕手机（Zenfone，Rog）有个错误导致屏幕不可点击，在此情况下，请尝试再次关闭屏幕，或者将此应用程序放在后台并再次恢复。 这应该能解决问题:)",
  	 	 	 	"eng": "ASUS phone (Zenfone, ROG) has bug with screen being not clickable, in the case, please try turning your screen off and on again, or put this app to background and resume it again. this should fix the issue :)"
  	 	 	}
  	 	},
  	 	"itemInbox": {
  	 	 	"title": {
- 	 	 	 	"trans": "项目收件箱",
+ 	 	 	 	"trans": "物品收件箱",
  	 	 	 	"eng": "Item Inbox"
  	 	 	},
  	 	 	"description": {
@@ -1786,7 +1786,7 @@
  	 	 	 	"eng": "There is no item in your item inbox"
  	 	 	},
  	 	 	"getAllItems": {
- 	 	 	 	"trans": "拿取所有物品",
+ 	 	 	 	"trans": "强夺所有",
  	 	 	 	"eng": "Get All Items"
  	 	 	}
  	 	},
@@ -1803,7 +1803,7 @@
  	 	 	 	 	"eng": "Nearby Enemies"
  	 	 	 	},
  	 	 	 	"desc": {
- 	 	 	 	 	"trans": "扫描附近的在大街上的敌人，地下城外的敌人更弱更容易击败，但获得的经验和战利品也会减少",
+ 	 	 	 	 	"trans": "在大街上扫描附近的的敌人，地下城外的敌人更弱也更容易击败，但获得的经验和战利品也会更少",
  	 	 	 	 	"eng": "Scans for nearby enemies on the street, enemies outside dungeons are weaker and easier to defeat. However they also drop less exp"
  	 	 	 	}
  	 	 	}
@@ -1818,7 +1818,7 @@
  	 	 	 	"eng": "Forgot Password?"
  	 	 	},
  	 	 	"registerPageButton": {
- 	 	 	 	"trans": "注册账号",
+ 	 	 	 	"trans": "注册账号？",
  	 	 	 	"eng": "Create Account?"
  	 	 	}
  	 	},
@@ -2446,7 +2446,7 @@
  	 	 	 	"eng": "Lethal"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "流浪者对你增加伤害",
+ 	 	 	 	"trans": "流浪者增加对你的伤害",
  	 	 	 	"eng": "Enemies of Scavengers gang deals increased damage to you"
  	 	 	}
  	 	},
@@ -2456,7 +2456,7 @@
  	 	 	 	"eng": "Disruptor"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "动物帮派对你增加伤害",
+ 	 	 	 	"trans": "动物帮派增加对你的伤害",
  	 	 	 	"eng": "Enemies of Animals gang deals increased damage to you"
  	 	 	}
  	 	},
@@ -2466,7 +2466,7 @@
  	 	 	 	"eng": "Makeshift"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "伏都教男孩团伙对你增肌伤害",
+ 	 	 	 	"trans": "伏都教男孩团伙增加对你的伤害",
  	 	 	 	"eng": "Enemies of Voodoo Boys gang deals increased damage to you"
  	 	 	}
  	 	}
@@ -2556,7 +2556,7 @@
  	 	 	 	"eng": "Discard"
  	 	 	},
  	 	 	"warning": {
- 	 	 	 	"trans": "上面的物品/项目将被丢弃，而不会被放入您的背包中。 这个动作是不可逆转的。",
+ 	 	 	 	"trans": "上面的物品将被丢弃，而不会被放入您的背包中。 这个动作是不可逆转的。",
  	 	 	 	"eng": "The item/items above will be discarded and not be placed into your inventory. This action is irreversible."
  	 	 	}
  	 	}
@@ -2614,7 +2614,7 @@
  	 	 	 	"eng": "Market merchant"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "您可以从玩家市场的玩家出售和购买物品，通过向玩家市场添加物品来试用它",
+ 	 	 	 	"trans": "您可以从玩家市场里的玩家购买和出售物品，通过向玩家市场添加物品来试用它",
  	 	 	 	"eng": "You can sell and purchase items from players in the player market, try it out by adding an item to the player market"
  	 	 	}
  	 	},
