--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -24,7 +24,7 @@
  	"ui": {
  	 	"blackMarket": {
  	 	 	"selectItemButton": {
- 	 	 	 	"trans": "印刷と売り",
+ 	 	 	 	"trans": "クラフト＆売却",
  	 	 	 	"eng": "Print And Sell"
  	 	 	}
  	 	},
@@ -38,7 +38,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"amount"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${amount} Bitcoinがギャングアカウントに入金されます. この操作は取り消すことができません.",
+ 	 	 	 	 	"trans": "${amount} BTCがギャングアカウントに入金されます. この操作は取り消すことができません.",
  	 	 	 	 	"eng": "${amount} bitcoin will be deposit into your gang account, this cannot be reversed"
  	 	 	 	}
  	 	 	},
@@ -120,7 +120,7 @@
  	 	 	 	"eng": "Community Content"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "このコンテンツはコミュニティメンバーによって制作されています.コミュニティに参加するにはここをクリックしてください.",
+ 	 	 	 	"trans": "このコンテンツはコミュニティメンバーによって制作されています. コミュニティに参加するにはここをクリックしてください.",
  	 	 	 	"eng": "This content is contributed by the community. click here to contribute your own content."
  	 	 	}
  	 	},
@@ -137,7 +137,7 @@
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "カラーキーパッド付きのロックされたLoot Boxが見つかった.間違えずに正しい色を選択し続けることでロックは解除できるはずだ.",
+ 	 	 	 	 	"trans": "カラーキーパッド付きのロックされたLoot Boxが見つかった. 間違えずに正しい色を選択し続けることでロックは解除できるはずだ.",
  	 	 	 	 	"eng": "You found a locked loot box with color keypad, you should be able to unlock it with the correct sequence of colors."
  	 	 	 	},
  	 	 	 	"progress": {
@@ -174,7 +174,7 @@
  	 	},
  	 	"supportUkraine": {
  	 	 	"description": {
- 	 	 	 	"trans": "ウクライナ,ロシア,そして全世界の人々が,一人の男の野望に苦しめられています.",
+ 	 	 	 	"trans": "ウクライナ, ロシア, そして全世界の人々が, 一人の男の野望に苦しめられています.",
  	 	 	 	"eng": "People of Ukraine, Russia and the whole world are suffering because one man's ambition.\\n Make love exploit, not war."
  	 	 	}
  	 	},
@@ -231,11 +231,11 @@
  	 	 	},
  	 	 	"modal": {
  	 	 	 	"selectDepositItem": {
- 	 	 	 	 	"trans": "いくつ収納しますか？",
+ 	 	 	 	 	"trans": "いくつ収納されますか？",
  	 	 	 	 	"eng": "How many would you like to put in the vault?"
  	 	 	 	},
  	 	 	 	"selectWithdrawItem": {
- 	 	 	 	 	"trans": "いくつ引出したいですか？",
+ 	 	 	 	 	"trans": "いくつ取り出されますか？",
  	 	 	 	 	"eng": "How many would you like to withdraw from the bank?"
  	 	 	 	},
  	 	 	 	"selectDeposit": {
@@ -276,7 +276,7 @@
  	 	},
  	 	"generalCaptcha": {
  	 	 	"story": {
- 	 	 	 	"trans": "古い鍵付きの金庫を見つけた.文字が書かれた付箋のようなものが張り付けてある.",
+ 	 	 	 	"trans": "古い鍵付きの金庫を見つけた. 文字が書かれた付箋のようなものが張り付けてある.",
  	 	 	 	"eng": "You found an old locked safe box, there seems like a post-it with some text written on it."
  	 	 	},
  	 	 	"title": {
@@ -313,7 +313,7 @@
  	 	 	 	"eng": "Links are not allowed"
  	 	 	},
  	 	 	"spamBlock": {
- 	 	 	 	"trans": "無意味なメッセージを送らないでください.スパムはミュートされます.",
+ 	 	 	 	"trans": "無意味なメッセージを送らないでください. スパムはミュートされます.",
  	 	 	 	"eng": "Please do not send meaningless message, spams will be muted."
  	 	 	},
  	 	 	"repeatBlock": {
@@ -321,14 +321,14 @@
  	 	 	 	"eng": "Please do not send the same message repeatedly, spams will be muted."
  	 	 	},
  	 	 	"shortChatBlock": {
- 	 	 	 	"trans": "短いメッセージではなく,もう少し長い文を書いてください.",
+ 	 	 	 	"trans": "短いメッセージではなく, もう少し長い文を書いてください.",
  	 	 	 	"eng": "Please do not send short messages, try a longer sentence instead."
  	 	 	},
  	 	 	"underlevelChatBlock": {
  	 	 	 	"vars": [
  	 	 	 	 	"minLevel"
  	 	 	 	],
- 	 	 	 	"trans": "チャットメッセージを送信するには,少なくともレベル${minLevel}になる必要があります",
+ 	 	 	 	"trans": "チャットメッセージを送信するには, 少なくともレベル${minLevel}になる必要があります",
  	 	 	 	"eng": "You need to be at least level ${minLevel} to send chat messages"
  	 	 	},
  	 	 	"chat": {
@@ -405,11 +405,11 @@
  	 	 	 	}
  	 	 	},
  	 	 	"lowPrintLevelTip2": {
- 	 	 	 	"trans": "クラフトスキルを上げるとより強力な武器を作成できます. クラフトスキルはキャッシュをプリントすることで上がります.",
+ 	 	 	 	"trans": "クラフトスキルを上げるとより強力な武器を作成できます. スキルレベルはキャッシュをプリントすることで上がります.",
  	 	 	 	"eng": "Increase your Printing Rank to create more powerful weapons by printing more caches"
  	 	 	},
  	 	 	"lowPrintLevelTip3": {
- 	 	 	 	"trans": "または, ブラックマーケットで自動プリント＆キャッシュ販売を行うことでも上げられます",
+ 	 	 	 	"trans": "また, ブラックマーケットでプリント＆売却を行うことでも上がります",
  	 	 	 	"eng": "Or by auto print and selling your caches in the Black Market"
  	 	 	},
  	 	 	"quickSlots": {
@@ -476,7 +476,7 @@
  	 	 	 	 	 	"timeSkipMinutes",
  	 	 	 	 	 	"timeSkipCost"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "グローバルスキップ（${timeSkipMinutes}分、${timeSkipCost} Unit）",
+ 	 	 	 	 	"trans": "グローバルスキップ（${timeSkipMinutes}分のスキップ, ${timeSkipCost} Unit）",
  	 	 	 	 	"eng": "Global Skip (${timeSkipMinutes} Min, Cost ${timeSkipCost} Units)"
  	 	 	 	},
  	 	 	 	"description": {
@@ -686,7 +686,7 @@
  	 	},
  	 	"backToPreviusLoc": {
  	 	 	"longPressBackToCity": {
- 	 	 	 	"trans": "長押しで中央街に戻ります",
+ 	 	 	 	"trans": "長押しで中心街に戻ります",
  	 	 	 	"eng": "Long press to go back to city"
  	 	 	}
  	 	},
@@ -731,7 +731,7 @@
  	 	 	 	 	 	"vars": [
  	 	 	 	 	 	 	"level"
  	 	 	 	 	 	],
- 	 	 	 	 	 	"trans": "クラフトレベル${level}の装備",
+ 	 	 	 	 	 	"trans": "クラフトレベル${level}",
  	 	 	 	 	 	"eng": "printing level ${level} equipments"
  	 	 	 	 	},
  	 	 	 	 	"description": {
@@ -871,7 +871,7 @@
  	 	 	 	 	"eng": "Error"
  	 	 	 	},
  	 	 	 	"subtitle": {
- 	 	 	 	 	"trans": "破壊的な失敗が発生",
+ 	 	 	 	 	"trans": "装備が破壊されました",
  	 	 	 	 	"eng": "Destructive failure accrued"
  	 	 	 	}
  	 	 	},
@@ -1675,7 +1675,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"playerCount"
  	 	 	 	],
- 	 	 	 	"trans": "${playerCount}プレーヤーが接続されています",
+ 	 	 	 	"trans": "${playerCount}人のプレーヤーが接続されています",
  	 	 	 	"eng": "${playerCount} player(s) connected"
  	 	 	}
  	 	},
@@ -1693,11 +1693,11 @@
  	 	 	 	}
  	 	 	},
  	 	 	"failureRateNoBreak": {
- 	 	 	 	"trans": "強化の失敗が発生する確率（装備は破壊されない）",
+ 	 	 	 	"trans": "強化が失敗する確率",
  	 	 	 	"eng": "Chance of safe failure"
  	 	 	},
  	 	 	"failureRate": {
- 	 	 	 	"trans": "装備の破壊される確率",
+ 	 	 	 	"trans": "装備が破壊される確率",
  	 	 	 	"eng": "Chance of destructive failure"
  	 	 	},
  	 	 	"notActivated": {
@@ -3904,7 +3904,7 @@
  	 	 	 	 	"maxStack",
  	 	 	 	 	"time"
  	 	 	 	],
- 	 	 	 	"trans": "高ランクアイテムのドロップ確率を上げるために設計された, 高度なエクスプロイトが内包されたシャード. ${time}分の間に始まった伝説のコンテナのロック解除の際, 伝説（${legendaryChance}％）と英雄（${epicChance}％）の追加ドロップチャンスを獲得する. *重要：既にバフがアクティブになっている状態でロック解除プロセスが開始されたときにのみ, このバフは適用されます.",
+ 	 	 	 	"trans": "高ランクアイテムのドロップ確率を上げるために設計された, 高度なエクスプロイトが内包されたシャード. ${time}分の間にロック解除が始まった伝説のコンテナからの「伝説」「英雄」アイテムドロップ率を上昇させる（ 伝説：+${legendaryChance}％, 英雄：+${epicChance}％）. *注：既にバフがア発動している状態でコンテナのロック解除が開始された場合のみ, このバフは適用されます.",
  	 	 	 	"eng": "A shard that contains advance exploits designed to increase random drop chance of high tier items. Gains additional drop chance of Legendary (${legendaryChance}%) and Epic (${epicChance}%) items when unlocking Legendary containers (Not stackable) for ${time} minute (Applies to all players). *IMPORTANT: The buff will only apply when the unlocking process is started while the buff is active*."
  	 	 	}
  	 	},
@@ -3933,7 +3933,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"levelName"
  	 	 	 	],
- 	 	 	 	"trans": "誰かの記憶と経験が込められたチップ. ${levelName}のEXPを得ることができる",
+ 	 	 	 	"trans": "誰かの記憶と経験が記録されたチップ. ${levelName}のEXPを得ることができる",
  	 	 	 	"eng": "A shard that contains someone's memory and experience. If used you may gain ${levelName} experience from this"
  	 	 	}
  	 	},
