--- a/contribution/lang/zh-CN.json
+++ b/contribution/lang/zh-CN.json
@@ -231,11 +231,11 @@
  	 	 	},
  	 	 	"modal": {
  	 	 	 	"selectDepositItem": {
- 	 	 	 	 	"trans": "你想把多少物品放在金库？",
+ 	 	 	 	 	"trans": "你想把多少件物品放在金库里？",
  	 	 	 	 	"eng": "How many would you like to put in the vault?"
  	 	 	 	},
  	 	 	 	"selectWithdrawItem": {
- 	 	 	 	 	"trans": "你想从银行取出多少物品？",
+ 	 	 	 	 	"trans": "你想要从银行里取出多少件物品？",
  	 	 	 	 	"eng": "How many would you like to withdraw from the bank?"
  	 	 	 	},
  	 	 	 	"selectDeposit": {
@@ -371,7 +371,7 @@
  	 	},
  	 	"deathScreen": {
  	 	 	"topTitleLeft": {
- 	 	 	 	"trans": "致命伤害",
+ 	 	 	 	"trans": "致命伤势",
  	 	 	 	"eng": "fatal injury"
  	 	 	},
  	 	 	"topTitleRight": {
@@ -387,7 +387,7 @@
  	 	 	 	"eng": "Critical Error: Neural Link Disconnected"
  	 	 	},
  	 	 	"progressBarTitle": {
- 	 	 	 	"trans": "重新建立",
+ 	 	 	 	"trans": "重新建立连接",
  	 	 	 	"eng": "Re-establishing connection"
  	 	 	}
  	 	},
@@ -405,11 +405,11 @@
  	 	 	 	}
  	 	 	},
  	 	 	"lowPrintLevelTip2": {
- 	 	 	 	"trans": "通过打印更多缓存来增加您的分子印刷等级以印刷更强大的武器",
+ 	 	 	 	"trans": "通过打印更多的缓存来增加您的分子印刷等级以印刷更强大的武器",
  	 	 	 	"eng": "Increase your Printing Rank to create more powerful weapons by printing more caches"
  	 	 	},
  	 	 	"lowPrintLevelTip3": {
- 	 	 	 	"trans": "或通过自动打印和销售您在黑市中的缓存",
+ 	 	 	 	"trans": "或通过黑市来自动打印和销售您的缓存",
  	 	 	 	"eng": "Or by auto print and selling your caches in the Black Market"
  	 	 	},
  	 	 	"quickSlots": {
@@ -480,7 +480,7 @@
  	 	 	 	 	"eng": "Global Skip (${timeSkipMinutes} Min, Cost ${timeSkipCost} Units)"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "全球时光飞逝让您跳过线下等待时间并立即完成。 \n     这将对执行挂机任务的所有玩家生效。",
+ 	 	 	 	 	"trans": "全球时光飞逝会让您跳过等待时间并立即完成。 \n     这将对所有执行挂机任务中的玩家生效。",
  	 	 	 	 	"eng": "Global Skip allow you to skip the AFK waiting time, and finish it instantly.\r\n    this effect will be applied to all player performing AFK task"
  	 	 	 	}
  	 	 	},
@@ -507,7 +507,7 @@
  	 	 	 	 	"eng": "Confirm use skip?"
  	 	 	 	},
  	 	 	 	"subtitle": {
- 	 	 	 	 	"trans": "全球时光飞逝将跳过所有执行挂机任务的玩家的等待时间",
+ 	 	 	 	 	"trans": "全球时光飞逝将让所有执行挂机任务的玩家跳过等待时间",
  	 	 	 	 	"eng": "Global Skip will skip the waiting time for all players performing AFK task"
  	 	 	 	}
  	 	 	},
@@ -525,7 +525,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "全球时光飞逝让您跳过挂机等待时间，并立即完成。 \n     这将对执行挂机任务的所有玩家生效。",
+ 	 	 	 	"trans": "全球时光飞逝会让您跳过挂机等待时间，并立即完成。 \n     这将对所有执行挂机任务的玩家生效。",
  	 	 	 	"eng": "Global Skip allow you to skip the AFK waiting time, and finish it instantly.\r\n    this effect will be applied to all players performing an AFK task"
  	 	 	}
  	 	},
@@ -537,7 +537,7 @@
  	 	},
  	 	"inventory": {
  	 	 	"items": {
- 	 	 	 	"trans": "项目",
+ 	 	 	 	"trans": "物品",
  	 	 	 	"eng": "items"
  	 	 	},
  	 	 	"secretKeys": {
@@ -618,7 +618,7 @@
  	 	 	 	]
  	 	 	},
  	 	 	"areaEffect": {
- 	 	 	 	"trans": "[AOE]范围效果，此物品的效果将施加道与你一同战斗的盟友上。",
+ 	 	 	 	"trans": "[AOE]范围效果，此物品的效果将施加到与你一同战斗的盟友上。",
  	 	 	 	"eng": "[AOE] Area of Effect, the effect of this item will apply allies in combat with you."
  	 	 	},
  	 	 	"equip": {
@@ -642,7 +642,7 @@
  	 	 	 	"eng": "Unlock"
  	 	 	},
  	 	 	"lock": {
- 	 	 	 	"trans": "锁",
+ 	 	 	 	"trans": "上锁",
  	 	 	 	"eng": "Lock"
  	 	 	},
  	 	 	"lockDescription": {
@@ -680,7 +680,7 @@
  	 	 	 	"eng": "You don't have any secret keys"
  	 	 	},
  	 	 	"noKeysSubtitle": {
- 	 	 	 	"trans": "您可以从地下城获得密钥",
+ 	 	 	 	"trans": "您可以从地下城里获得密钥",
  	 	 	 	"eng": "You can obtain secret keys from Dungeons"
  	 	 	}
  	 	},
@@ -955,7 +955,7 @@
  	 	 	},
  	 	 	"stall": {
  	 	 	 	"sellItemButton": {
- 	 	 	 	 	"trans": "卖出道具",
+ 	 	 	 	 	"trans": "将物品上架",
  	 	 	 	 	"eng": "Put Item On Sale"
  	 	 	 	},
  	 	 	 	"selectItemForSale": {
@@ -966,11 +966,11 @@
  	 	},
  	 	"afkTask": {
  	 	 	"newbieTip": {
- 	 	 	 	"trans": "即使您关闭游戏，任务也会继续下去",
+ 	 	 	 	"trans": "即使您关闭了游戏，任务也会继续下去",
  	 	 	 	"eng": "The task will continue even if you close the game"
  	 	 	},
  	 	 	"syncing": {
- 	 	 	 	"trans": "同步",
+ 	 	 	 	"trans": "同步中",
  	 	 	 	"eng": "Syncing"
  	 	 	},
  	 	 	"manualRefresh": {
@@ -992,7 +992,7 @@
  	 	 	 	"eng": "Are you sure you want to abort?"
  	 	 	},
  	 	 	"abortWarning": {
- 	 	 	 	"trans": "终止这个任务您将不会收到任何奖励，且不会返回所使用的材料",
+ 	 	 	 	"trans": "终止这个任务后您将不会收到任何奖励，而且也不会退回任何使用的材料",
  	 	 	 	"eng": "By aborting this you won\\'t receive any reward and the material used won\\'t be returned"
  	 	 	}
  	 	},
@@ -1022,27 +1022,27 @@
  	 	 	 	},
  	 	 	 	"printingTooLow": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "改善印刷等级",
+ 	 	 	 	 	 	"trans": "提升印刷等级",
  	 	 	 	 	 	"eng": "Improve Printing Rank"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "打印等级确定您打印的项目级别。 通过印刷和销售在黑色市场中获得印刷exp",
+ 	 	 	 	 	 	"trans": "您的打印等级决定了您打印物品的等级。 通过黑市来打印和销售缓存单元以获得打印经验",
  	 	 	 	 	 	"eng": "Printing Rank determines the level of item you print. Gain printing exp by print & sell in Black Market"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"gearTooWeak": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "获得更好的设备！",
+ 	 	 	 	 	 	"trans": "获取更好的装备！",
  	 	 	 	 	 	"eng": "Get even better equipments!"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "您当前的设备似乎已过时为您的水平，请尝试打印更强大的设备来更换它们",
+ 	 	 	 	 	 	"trans": "您当前的装备对于您的等级来说似乎有点过时了，请尝试打印更强大的装备来更换它们",
  	 	 	 	 	 	"eng": "Your current equipment seems abit outdated for your level, try printing stronger ones to replace them"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"noUpgrade": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "升级您的设备！",
+ 	 	 	 	 	 	"trans": "升级您的装备！",
  	 	 	 	 	 	"eng": "Upgrade your equipment!"
  	 	 	 	 	},
  	 	 	 	 	"description": {
@@ -1133,7 +1133,7 @@
  	 	 	 	"eng": "Suspended"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "由于可疑活动，系统已自动暂停您的帐户",
+ 	 	 	 	"trans": "由于可疑活动，系统已经自动暂停了您的帐户",
  	 	 	 	"eng": "Your account has been suspended automatically by the system due to Unusual Activity"
  	 	 	},
  	 	 	"possibleReasons": {
@@ -1146,7 +1146,7 @@
  	 	 	 	 	"eng": "1. You created multiple accounts to gain unfair advantage"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "2.您使用了某种自动化软件来获得不公平的优势，例如Autoclicker，Bots等。",
+ 	 	 	 	 	"trans": "2.您使用了某种自动化软件来获得不公平的优势，例如自动点击器，脚本等等。",
  	 	 	 	 	"eng": "2. You have used some kind of automated software to gain unfair advantage, such as autoclicker, bots, etc."
  	 	 	 	},
  	 	 	 	"4": {
@@ -1209,7 +1209,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"timeStr"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "将会耗费 ${timeStr}",
+ 	 	 	 	 	"trans": "这将会耗费 ${timeStr}",
  	 	 	 	 	"eng": "This will take ${timeStr}"
  	 	 	 	}
  	 	 	}
@@ -1237,17 +1237,17 @@
  	 	 	},
  	 	 	"disableAttackBar": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "禁用攻击时机栏",
+ 	 	 	 	 	"trans": "禁用攻击时序栏",
  	 	 	 	 	"eng": "Disable Attack Timing Bar"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "禁用攻击时序栏后不会获得额外伤害",
+ 	 	 	 	 	"trans": "禁用攻击时序栏后将不会获得额外伤害",
  	 	 	 	 	"eng": "Disabling attack timing bar will not grant extra damage"
  	 	 	 	}
  	 	 	},
  	 	 	"blockGifts": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "禁用接收礼物",
+ 	 	 	 	 	"trans": "禁用礼物接收",
  	 	 	 	 	"eng": "Disable receiving gifts"
  	 	 	 	}
  	 	 	},
@@ -1269,7 +1269,7 @@
  	 	 	 	 	"eng": "Disable Chat Effect"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "如果在时光飞逝进行中聊天室卡顿则禁用聊天室效果",
+ 	 	 	 	 	"trans": "如果在时光飞逝进行中聊天室卡顿，请禁用聊天室效果",
  	 	 	 	 	"eng": "Disable if chat tab lags during skips"
  	 	 	 	}
  	 	 	},
@@ -1298,7 +1298,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"dangerZone": {
- 	 	 	 	"trans": "危险操作",
+ 	 	 	 	"trans": "危险区域",
  	 	 	 	"eng": "Danger Zone"
  	 	 	},
  	 	 	"restartRequired": {
@@ -1334,7 +1334,7 @@
  	 	},
  	 	"job": {
  	 	 	"cantEnterError": {
- 	 	 	 	"trans": "您至少需要达到2级来访问工作中心",
+ 	 	 	 	"trans": "您至少需要达到2级才能访问工作中心",
  	 	 	 	"eng": "You need to be at least level 2 to access the job hub"
  	 	 	}
  	 	},
@@ -1363,14 +1363,14 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"playerName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "解除屏蔽${playerName}",
+ 	 	 	 	 	"trans": "解除对${playerName}的屏蔽",
  	 	 	 	 	"eng": "Unblock ${playerName}"
  	 	 	 	}
  	 	 	}
  	 	},
  	 	"machineCraft": {
  	 	 	"itemLocked": {
- 	 	 	 	"trans": "此项目已锁定",
+ 	 	 	 	"trans": "此物品已锁定",
  	 	 	 	"eng": "This item is locked"
  	 	 	}
  	 	},
@@ -1380,7 +1380,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"percent"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "您确定要在${percent}％破坏性故障机会下校准此项目吗？",
+ 	 	 	 	 	"trans": "您确定要在${percent}％的破坏性故障机会下校准此物品吗？",
  	 	 	 	 	"eng": "Are you sure you want to calibrate this item with ${percent}% destructive failure chance?"
  	 	 	 	}
  	 	 	}
@@ -1410,7 +1410,7 @@
  	 	 	 	 	"eng": "Dungeons"
  	 	 	 	},
  	 	 	 	"des": {
- 	 	 	 	 	"trans": "在地下城中，在每次战斗后你都不会恢复生命，虽然敌人更强大，但可以得到更多经验和战利品",
+ 	 	 	 	 	"trans": "在地下城中，在每次战斗后你都不会恢复生命，虽然敌人更强大，但可以获得更多的经验和战利品",
  	 	 	 	 	"eng": "In dungeons, you will not heal after each fight, and enemies are stronger, but there are more exp and loots"
  	 	 	 	}
  	 	 	},
@@ -1619,7 +1619,7 @@
  	 	},
  	 	"craftingPage": {
  	 	 	"onlyShowCraftable": {
- 	 	 	 	"trans": "隐藏你不能合成的配方",
+ 	 	 	 	"trans": "隐藏你目前不能合成的配方",
  	 	 	 	"eng": "Hide recipes that you can\\'t craft"
  	 	 	},
  	 	 	"title": {
@@ -1641,7 +1641,7 @@
  	 	 	 	"eng": "Available"
  	 	 	},
  	 	 	"claimed": {
- 	 	 	 	"trans": "领取",
+ 	 	 	 	"trans": "已领取",
  	 	 	 	"eng": "Claimed"
  	 	 	},
  	 	 	"cantClaimYet": {
@@ -1668,7 +1668,7 @@
  	 	 	 	"eng": "Only show dungeons I can join"
  	 	 	},
  	 	 	"noDungeon": {
- 	 	 	 	"trans": "目前没有公开地下城",
+ 	 	 	 	"trans": "目前没有公开的地下城",
  	 	 	 	"eng": "There is currently no public dungeon"
  	 	 	},
  	 	 	"playerCount": {
@@ -1724,7 +1724,7 @@
  	 	 	 	 	"eng": "Processing"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "您可以留下此页面并以后回来",
+ 	 	 	 	 	"trans": "您可以离开此页面并以后回来",
  	 	 	 	 	"eng": "You may leave this page and come back later"
  	 	 	 	}
  	 	 	},
@@ -1786,7 +1786,7 @@
  	 	 	 	"eng": "There is no item in your item inbox"
  	 	 	},
  	 	 	"getAllItems": {
- 	 	 	 	"trans": "强夺所有",
+ 	 	 	 	"trans": "获取所有物品",
  	 	 	 	"eng": "Get All Items"
  	 	 	}
  	 	},
